--- a/Portfolio_Website/assets/bottom_style.css
+++ b/Portfolio_Website/assets/bottom_style.css
@@ -89,7 +89,8 @@ p {
   /* font-family: roboto; */
 /* } */
 .container {
-  width: 400px;
+  width: 800px;
+  /* height:80%; */
   margin: 120px auto 120px;
   background-color: #fff;
   padding: 0 20px 20px;
@@ -167,7 +168,7 @@ p {
 /* Section B */
 
 #section-b{
-  padding: 2em 1em 1em;
+  padding: 2em 5em 5em 5em;
 }
 
 #section-b ul{
@@ -196,9 +197,24 @@ p {
 
 /* Section C : --> Academic Achievment */
 
+.resume{
+  display: block;
+  position: relative;
+  width: 90%;
+  background: rgba(69, 74, 124, 0.2);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  display: grid;
+  grid-template-columns: 300px ;
+  grid-gap: 10px;
+  align-items: center;
+  color:#333;
+  font-weight: 100;
+}
+
 .albums {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: 20px;
 }
 
@@ -210,7 +226,7 @@ p {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
   padding: 20px;
   display: grid;
-  grid-template-columns: 300px 300px;
+  grid-template-columns: 300px ;
   grid-gap: 10px;
   align-items: center;
   color:#333;
